syntax = "proto3";

option java_multiple_files = true;
option java_package = "ni.core";
option java_outer_classname = "CoreService";
option objc_class_prefix = "NI";

//---------------------------------------------------------------------
//---------------------------------------------------------------------
package Core;

service CoreService {

  // Sends a greeting
  rpc GetServerStatus () returns (ServerStatus) {}
}

// The response message containing the server status
message ServerStatus {
  bool message = 1;
}
